--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,15 +31,21 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./
+          platforms: linux/arm/v7
           file: ./backendDockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/signaling-server:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
      
       - name: Build and push frontend
         id: docker_build_2
         uses: docker/build-push-action@v2
         with:
           context: ./
+          platforms: linux/arm/v7
           file: ./frontendDockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/vidChat:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache          
