--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,10 +34,10 @@ jobs:
           platforms: linux/arm/v7
           file: ./frontendDockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/vidChat:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/vid-chat:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache  
-          
+
       - name: Build and push backend
         id: docker_build_1
         uses: docker/build-push-action@v2
