--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -52,5 +52,15 @@ jobs:
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/signaling-server:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
-     
+
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          script: |
+            whoami
+            ls -al
         
